--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About - Sailor Bootstrap Template</title>
+  <title>About - Beeside</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Beeside logo-03.png" rel="icon">
+  <link href="assets/img/Beeside logo-03.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Sailor</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Beeside</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -50,30 +50,14 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="about.html" class="active">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html">Project</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="blog.html">Blog</a></li>
 
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="index.html" class="getstarted">Get Started</a></li>
+          <li><a href="index.html" class="getstarted">Try it Free</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -104,23 +88,21 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Apa itu Beeside?</h2>
+            <h3>Mari kita simak data berikut : </h3>
+            <p>Menurut survei yang dilakukan oleh Global Entrepreneurship Monitor pada tahun 2020, sekitar 61,2% orang dewasa di Indonesia merasa bahwa mereka memiliki keterampilan yang diperlukan untuk memulai bisnis, namun hanya sekitar 18,4% yang memiliki rencana konkret untuk memulai bisnis.<br> Sebuah survei yang dilakukan oleh Ipsos pada tahun 2019 menemukan bahwa sekitar 64% warga Indonesia merasa tidak percaya diri dalam memulai bisnis mereka sendiri.</p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Beeside hadir untuk membantu Sobat Optimis untuk menyusun sebuah rencana bisnis. Merencanakan bisnis yang baik sangat penting untuk memastikan kesuksesan bisnis di masa depan. Beeside mencoba untuk memberikan solusi bagi 64% warga Indonesia yang merasa ragu akan ide bisnisnya.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i> Membantu mengkreasikan ide bisnis, serta menjadi pelengkap bagi ide bisnis yang sudah ada </li>
+              <li><i class="ri-check-double-line"></i> Merancang sebuah pondasi Business Plan yang kuat dari mulai Visi hingga eksekusi</li>
+              <li><i class="ri-check-double-line"></i> Mendukung penuh terwujudnya sebuah mimpi baik</li>
             </ul>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Kami memahami benar, bahwa memulai itu adalah sebuah hal yang perlu banyak pertimbangan. Dengan melakukan ketiga hal tersebut, Beeside yakin Sobat Optimis akan merasa lebih percaya diri dan solid dalam memulai sebuah bisnis.
             </p>
           </div>
         </div>
@@ -133,82 +115,24 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Our Hardowrking Team</p>
+          <h2>Visi</h2>
+          <p>One Stop Etrepreneur</p>
+          <h6>Menyediakan solusi terpadu bagi para entrepreneur dalam memulai dan mengembangkan bisnis. Beeside memfokuskan untuk memberikan semua kebutuhan dan layanan yang dibutuhkan oleh entrepreneur dalam satu tempat.<br> 
+            Beeside membantu mempermudah proses bisnis dan mengurangi stres bagi para entrepreneur, sehingga mereka dapat fokus pada pertumbuhan bisnis mereka. Beeside juga menekankan pada kualitas layanan dan memastikan pelanggan mendapatkan value terbaik.</h6>
         </div>
-
+        <div class="section-title">
+          <h2>Misi</h2>
+          <p>7 Spirit Beeside</p>
+          <i class="ri-check-double-line"></i> Menyediakan solusi bisnis yang lengkap dan terintegrasi bagi para wirausaha.<br>
+          <i class="ri-check-double-line"></i> Mendukung pertumbuhan dan keberhasilan para wirausaha dengan memberikan akses ke sumber daya dan layanan bisnis yang dibutuhkan.<br>
+          <i class="ri-check-double-line"></i> Memfasilitasi kolaborasi dan kerja sama antar wirausaha untuk membangun ekosistem bisnis yang kuat.<br>
+          <i class="ri-check-double-line"></i> Mempermudah proses pengembangan bisnis dengan meminimalisir hambatan dan memberikan solusi praktis.<br>
+          <i class="ri-check-double-line"></i> Mempromosikan inovasi dan kreativitas dalam bisnis dengan memfasilitasi akses ke teknologi dan sumber daya baru.<br>
+          <i class="ri-check-double-line"></i> Memberikan layanan dan dukungan berkelanjutan bagi para wirausaha untuk memastikan keberhasilan jangka panjang.<br>
+          <i class="ri-check-double-line"></i> Menciptakan lingkungan bisnis yang inklusif dan dapat diakses bagi semua wirausaha, tanpa terkecuali. <br>
+        </div>
         <div class="row">
-
-          <div class="col-lg-6">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4 mt-lg-0">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 mt-4">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
         </div>
-
       </div>
     </section><!-- End Team Section -->
 
@@ -217,62 +141,18 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Our Skills</h2>
-          <p>Check our Our Skills</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
+          <h2>Core Value</h2>
+          <p>8 Core Value Beeside</p>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item">Kepedulian: memberikan dukungan dan solusi bisnis yang memprioritaskan kebutuhan dan tujuan wirausaha.</li>
+            <li class="list-group-item">Inovasi: berfokus pada pengembangan dan implementasi solusi bisnis yang inovatif dan berdaya saing.</li>
+            <li class="list-group-item">Kolaborasi: mempromosikan kerja sama dan sinergi antar wirausaha untuk membangun ekosistem bisnis yang kuat.</li>
+            <li class="list-group-item">Aksesibilitas: memastikan bahwa semua wirausaha memiliki akses yang sama dan setara ke sumber daya dan layanan bisnis yang dibutuhkan.</li>
+            <li class="list-group-item">Kemudahan: memberikan solusi dan layanan bisnis yang mudah digunakan dan efisien bagi para wirausaha.</li>
+            <li class="list-group-item">Dukungan: memberikan dukungan berkelanjutan bagi para wirausaha untuk memastikan keberhasilan jangka panjang.</li>
+            <li class="list-group-item">Integritas: bertindak dengan profesionalisme, transparansi, dan akuntabilitas dalam setiap aspek bisnis.</li>
+            <li class="list-group-item">Inklusivitas: membangun lingkungan bisnis yang inklusif dan dapat diakses bagi semua wirausaha, tanpa terkecuali.</li>
+          </ol>
         </div>
 
       </div>
@@ -288,72 +168,48 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Beeside</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Mojosongo<br>
+                Jebres, Surakarta<br>
+                <strong>Phone:</strong> 089685266987<br>
+                <strong>Email:</strong> alwaysbeesideyou@gmail.com<br>
               </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Social Media</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-tiktok"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              </div>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
+          <div class="col-lg-4 col-md-6 footer-links">
+            <h4>Credits</h4>
+            <p>
+              &copy; Copyright <strong><span>Beeside -  2023</span></strong>. All Rights Reserved <br>
+              Designed with <a href="https://bootstrap.com/">Bootstrap</a>
+            </p>
           </div>
-
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
   </footer><!-- End Footer -->
-
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
