--- a/pricing.html
+++ b/pricing.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pricing - Sailor Bootstrap Template</title>
+  <title>Pricing - Beeside</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Beeside logo-03.png" rel="icon">
+  <link href="assets/img/Beeside logo-03.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -42,38 +42,21 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Sailor</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Beeside</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="about.html">About</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
+          <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html">Project</a></li>
           <li><a href="pricing.html" class="active">Pricing</a></li>
           <li><a href="blog.html">Blog</a></li>
 
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="index.html" class="getstarted">Get Started</a></li>
+          <li><a href="index.html" class="getstarted">Try it Free</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -106,69 +89,75 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="box">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>Gratis</h3>
+              <h4><sup>Rp</sup>0<span></span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Business Plan</li>
+                <li>BMC (Business Model Canvas)</li>
+                <li>5-7 hari kerja</li>
+                <li class="na">Konsultasi</li>
+                <li class="na">Revisi</li>
+                <li class="text-white">.</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Buat Sekarang</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h3>Percepatan</h3>
+              <h4><sup>Rp</sup>24<span>.900</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Business Plan</li>
+                <li>BMC (Business Model Canvas)</li>
+                <li>4 hari kerja</li>
+                <li>Konsultasi</li>
+                <li class="na">Revisi</li>
+                <li class="text-white">.</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Buat Sekarang</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>Akselerasi</h3>
+              <h4><sup>Rp</sup>39<span>.900</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Business Plan</li>
+                <li>BMC (Business Model Canvas)</li>
+                <li>4 hari kerja</li>
+                <li>Konsultasi</li>
+                <li>Revisi</li>
+                <li class="text-white">
+                  .
+                </li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Buat Sekarang</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box">
-              <span class="advanced">Advanced</span>
-              <h3>Ultimate</h3>
-              <h4><sup>$</sup>49<span> / month</span></h4>
+              <span class="advanced">Optimis</span>
+              <h3>Akselerasi Prima</h3>
+              <h4><sup>Rp</sup>59<span>.900</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Business Plan</li>
+                <li>BMC (Business Model Canvas)</li>
+                <li>3 hari kerja</li>
+                <li>Konsultasi</li>
+                <li>Revisi</li>
+                <li>+Free Pembuatan Presentasi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Buat Sekarang</a>
               </div>
             </div>
           </div>
@@ -190,11 +179,11 @@
         <div class="row faq-item d-flex align-items-stretch">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Non consectetur a erat nam at lectus urna duis?</h4>
+            <h4>Mengapa harus Beeside ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+              Bagi kami setiap ide/gagasan dari Sobat Optimis perlu di dengar dan diwujudkan. Beeside akan membantu meyakinkan Sobat Optimis untuk memulai sebuah bisnis/usaha. Baik bisnis skala besar, UMKM, maupun perseorangan. Kami akan menerjemahkan dan menganalisa ide Sobat Optimis kedalam sebuah Bisnis Plan, dan BMC, supaya Sobat Optimis dapat mengetahui lebih dalam terkait bisnis yang akan atau sedang dilakukan. Dengan begitu, maka Sobat Optimis akan merasa lebih yakin untuk memulai/melanjutkan bisnisnya. Untuk lebih jelasnya silakan mengunjungi halaman <a href="portfolio.html">Project</a>
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -202,11 +191,11 @@
         <div class="row faq-item d-flex align-items-stretch">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h4>
+            <h4>Bagaimana Beeside membantu kami ?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+              Sobat optimis silakan mengisi form yang telah disediakan. Kemudian tim kami akan menganalisa sesuai isian pada form. Setelah melakukan analisa, maka kami akan mendeskripsikannya pada Bisnis Plan. Kami mengejakan sesuai paket yang dipilih. Apabila telah selesai, maka hasilnya akan kami kirimkan melalui email. Pastikan email sobat optimis selalu aktif, untuk mempermudah komunikasi.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -214,11 +203,20 @@
         <div class="row faq-item d-flex align-items-stretch">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h4>
+            <h4>Bagaimana proses pembayaran, apabila memilih pake berbayar ?</h4>
           </div>
           <div class="col-lg-7">
-            <p>
-              Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.
+            <p> Pembayaran dapat dilakukan dengan menggunkan dompet digital. Gopay, Dana, maupun OVO</p>
+          </div>
+        </div><!-- End F.A.Q Item-->
+
+        <div class="row faq-item d-flex align-items-stretch">
+          <div class="col-lg-5">
+            <i class="bx bx-help-circle"></i>
+            <h4>Dimana kita bisa menyampaikan kritik,saran dan aduan kepada Beeside ?</h4>
+          </div>
+          <div class="col-lg-7">
+            <p> Kami sangat membutuhkan kritik, saran, maupun aduan untuk selalu memberikan yang terbaik bagi Sobat Optimis. Kritik, saran, dan aduan dapat disampaikan melalui halaman Contact. Atau dengan mengunjungi <a href="contact.html">Tautan ini.</a>
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -226,23 +224,11 @@
         <div class="row faq-item d-flex align-items-stretch">
           <div class="col-lg-5">
             <i class="bx bx-help-circle"></i>
-            <h4>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h4>
+            <h4>Bagaimana Hari Kerja di Beeside?</h4>
           </div>
           <div class="col-lg-7">
             <p>
-              Aperiam itaque sit optio et deleniti eos nihil quidem cumque. Voluptas dolorum accusantium sunt sit enim. Provident consequuntur quam aut reiciendis qui rerum dolorem sit odio. Repellat assumenda soluta sunt pariatur error doloribus fuga.
-            </p>
-          </div>
-        </div><!-- End F.A.Q Item-->
-
-        <div class="row faq-item d-flex align-items-stretch">
-          <div class="col-lg-5">
-            <i class="bx bx-help-circle"></i>
-            <h4>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h4>
-          </div>
-          <div class="col-lg-7">
-            <p>
-              Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+              Hari kerja di Beeside adalah 5 hari, yaitu Senin - Jumat. Mulai pukul 09.00 hingga 16.00 WIB. Kami akan memproses seluruh pekerjaan pada waktu tersebut.
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
@@ -260,71 +246,48 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Beeside</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Mojosongo<br>
+                Jebres, Surakarta<br>
+                <strong>Phone:</strong> 089685266987<br>
+                <strong>Email:</strong> alwaysbeesideyou@gmail.com<br>
               </p>
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Social Media</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-tiktok"></i></a>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              </div>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
+          <div class="col-lg-4 col-md-6 footer-links">
+            <h4>Credits</h4>
+            <p>
+              &copy; Copyright <strong><span>Beeside -  2023</span></strong>. All Rights Reserved <br>
+              Designed with <a href="https://bootstrap.com/">Bootstrap</a>
+            </p>
           </div>
-
         </div>
       </div>
     </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+  </footer>
+<!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
