--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Beeside</span></h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp">Beeside hadir untuk membantu Sobat Optimis untuk menyusun sebuah rencana bisnis. Merencanakan bisnis yang baik sangat penting untuk memastikan kesuksesan bisnis di masa depan</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -87,7 +87,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Langkahkan kaki ke masa depan</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp">Tak ada lagi keraguan, mari kita terus berjalan.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -98,7 +98,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Dari gagasan menjadi kenyataan</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp">Membuat gagasan menjadi kenyataan. Bersama membuat langkah-langkah konkret seperti merencanakan, mengorganisir, dan bertindak dengan disiplin untuk mengimplementasikan ide secara efektif dan efisien dalam kehidupan nyata</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -147,33 +147,79 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients section-bg">
+    <!--TEST-->
+    <section id="features" class="features">
       <div class="container">
 
-        <div class="row">
-          <h2>3 Langkah Mudah</h2>
-          <h4>Mewujudkan mimpi di Beeside</h4>
-          <div class="col-md-12 col-12 d-flex align-items-center justify-content-center">
-            <img src="assets/img/1a.png" class="img-fluid" alt="">
-          </div>
-
-          <div class=" col-md-12 col-12 d-flex align-items-center justify-content-center">
-            <img src="assets/img/2a.png" class="img-fluid" alt="">
-          </div>
-
-          <div class=" col-md-12 col-12 d-flex align-items-center justify-content-center">
-            <img src="assets/img/3a.png" class="img-fluid" alt="">
-          </div>
-
+        <div class="section-title">
+          <h2>Bagaimana kami bekerja ?</h2>
+          <p>3 Lngkah Mudah Wujudkan Mimpimu</p>
         </div>
 
-      </div>
-    </section><!-- End Clients Section -->
-    
+        <div class="row">
+          <div class="col-lg-3">
+            <ul class="nav nav-tabs flex-column">
+              <li class="nav-item">
+                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">1. Perencanaan</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">2. Pembuatan Business Plan</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-3">3. Presentasi</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-9 mt-4 mt-lg-0">
+            <div class="tab-content">
+              <div class="tab-pane active show" id="tab-1">
+                <div class="row">
+                  <div class="col-lg-8 details order-2 order-lg-1">
+                    <h3>Perencanaan</h3>
+                    <p>Ceritakan rencana Sobat Optimis pada form yang telah kami sediakan. Silakan diisi sesuai dengan ide Sobat Optimis. Kemudian kami akan menghubungi melalui email.</p>
+                  </div>
+                  <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <img src="assets/img/features-1.png" alt="" class="img-fluid">
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab-2">
+                <div class="row">
+                  <div class="col-lg-8 details order-2 order-lg-1">
+                    <h3>Pembuatan Business Plan</h3>
+                    <p>Kami akan menganalisa rencana Sobat Optimis. Hasil analisa akan kami tuangkan pada sebuah Business Plan dan BMC. Hasilnya akan kami kirimkan ke email Sobat Optimis.</p>
+                  </div>
+                  <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <img src="assets/img/features-2.png" alt="" class="img-fluid">
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane" id="tab-3">
+                <div class="row">
+                  <div class="col-lg-8 details order-2 order-lg-1">
+                    <h3>Presentasi</h3>
+                    <p>Presentasikan hasilnya kepada keluarga, teman, kolega atau siapapun yang akan diajak untuk memulai bisnis bersama. Mulailah, karena Bangsa ini masih sangat membutuhkan banyak sekali orang-orang seperti Sobat Optimis.</p>
+                  </div>
+                  <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <img src="assets/img/features-3.png" alt="" class="img-fluid">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div></section><!--END TEST-->
+
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
+        <section id="features" class="features">
+          <div class="container">
+    
+            <div class="section-title">
+              <h2>Services</h2>
+              <p></p>
+            </div>
 
         <div class="row">
           <div class="col-md-6">
