--- a/pricing.html
+++ b/pricing.html
@@ -195,7 +195,7 @@
           </div>
           <div class="col-lg-7">
             <p>
-              Sobat optimis silakan mengisi form yang telah disediakan. Kemudian tim kami akan menganalisa sesuai isian pada form. Setelah melakukan analisa, maka kami akan mendeskripsikannya pada Bisnis Plan. Kami mengejakan sesuai paket yang dipilih. Apabila telah selesai, maka hasilnya akan kami kirimkan melalui email. Pastikan email sobat optimis selalu aktif, untuk mempermudah komunikasi.
+              Sobat optimis silakan mengisi form yang telah disediakan. Kemudian tim kami akan menganalisa sesuai isian pada form. Setelah melakukan analisa, maka kami akan mendeskripsikannya pada Bisnis Plan. Kami mengejakan sesuai paket yang dipilih. Apabila telah selesai, maka hasilnya akan kami kirimkan melalui email. Pastikan email sobat optimis selalu aktif, untuk mempermudah komunikasi. Silakan mempresentasikan hasilnya kepada sahabat, keluarga atau siapapun yang akan diajak untuk memulai Bisnis. 
             </p>
           </div>
         </div><!-- End F.A.Q Item-->
